<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="411dp"
        android:layout_height="82dp"
        android:background="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/logo"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:src="@mipmap/tfh_logo_round"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent">
        </com.google.android.material.imageview.ShapeableImageView>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/tasty_food_here_label"
            android:textColor="@color/white"
            android:textSize="38sp" />

    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="82dp"
        android:layout_marginBottom="130sp"
        app:layout_constraintTop_toBottomOf="@id/materialToolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/createAccountLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/create_new_account_label"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="50sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40sp"
                android:layout_marginTop="20sp"
                android:layout_marginRight="40sp"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/first_name_label"
                android:textSize="30sp"
                app:layout_constraintTop_toBottomOf="@+id/createAccountLabel" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40sp"
                android:layout_marginTop="20sp"
                android:layout_marginRight="40sp"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/last_name_label"
                android:textSize="30sp"
                app:layout_constraintTop_toBottomOf="@+id/first_name" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40sp"
                android:layout_marginTop="20sp"
                android:layout_marginRight="40sp"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/phone_label"
                android:text="@string/phone_prefix"
                android:textSize="30sp"
                app:layout_constraintTop_toBottomOf="@+id/last_name" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40sp"
                android:layout_marginTop="20sp"
                android:layout_marginRight="40sp"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/email_label"
                android:textSize="30sp"
                app:layout_constraintTop_toBottomOf="@+id/phone" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40sp"
                android:layout_marginTop="20sp"
                android:layout_marginRight="40sp"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/password_label"
                android:textSize="30sp"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40sp"
                android:layout_marginTop="20sp"
                android:layout_marginRight="40sp"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/confirm_password_lable"
                android:textSize="30sp"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@+id/password" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50sp"
        android:background="@color/black"
        app:backgroundTint="@color/black"
        android:fontFamily="sans-serif-medium"
        android:text="@string/register_label"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="40sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>