<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="411dp"
        android:layout_height="82dp"
        android:background="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/logo"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:src="@mipmap/tfh_logo_round"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent">
        </com.google.android.material.imageview.ShapeableImageView>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:layout_marginStart="30dp"
            android:text="@string/tasty_food_here_label"
            android:textColor="@color/white"
            android:textSize="38sp" />

    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/materialToolbar"
        android:layout_marginTop="82dp"
        android:layout_marginBottom="130sp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/loginLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/login_label"
                android:textColor="@color/black"
                android:textSize="80sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/signInMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0sp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/sign_in_to_continue_message"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginLabel" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/registerNowBlock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signInMessage"
                android:layout_marginTop="30sp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/noAccountMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/no_account_question"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/register_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/register_now_label"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp"
                    app:layout_constraintLeft_toRightOf="@id/noAccountMessage"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="10sp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40sp"
                android:layout_marginTop="20sp"
                android:layout_marginRight="40sp"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/phone_label"
                android:text="@string/phone_prefix"
                android:textSize="30sp"
                app:layout_constraintTop_toBottomOf="@+id/registerNowBlock" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40sp"
                android:layout_marginTop="20sp"
                android:layout_marginRight="40sp"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/password_label"
                android:inputType="textPassword"
                android:textSize="30sp"
                app:layout_constraintTop_toBottomOf="@+id/phone" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50sp"
        android:background="@color/black"
        app:backgroundTint="@color/black"
        android:fontFamily="sans-serif-medium"
        android:text="@string/log_in_message"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="40sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>